[package]
name = "bt_kb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
sdl2 = { version = "0.35", features = ["ttf"] }
serialport = "4"
log = "0.4"
env_logger = "0.9"